Force scrollbar to fix jumpiness

--- a/CS320_ResistorSorter/war/_view/css/styles.css
+++ b/CS320_ResistorSorter/war/_view/css/styles.css
@@ -1,4 +1,8 @@
 @CHARSET "ISO-8859-1";
+html{
+	overflow: -moz-scrollbars-vertical;
+	overflow-y: scroll;
+}
 .error{
 	color: red;
 }
